# thesis_ros2

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Readme.md  package.xml  run-docker-image-gpu.sh  setup.cfg  setup.py
autonomous_exploration/: package.xml  setup.cfg  setup.py
autonomous_exploration/autonomous_exploration/: autonomousExploration.py  rosbridge_msgs_publisher.py  simpleRobot.py
autonomous_exploration/cartographer_config/: burger_velodyne.lua
autonomous_exploration/launch/: launch_turtlebot3_simulation.launch.py  turtlebot3_cartographer.launch.py  turtlebot3_navigation2.launch.py
autonomous_exploration/nav2_params/: burger_velodyne.yaml  burger_velodyne_3d.yaml
autonomous_exploration_msgs/: CMakeLists.txt  package.xml
autonomous_exploration_msgs/action/: AutonomousExplorationAction.action
autonomous_exploration_msgs/msg/: ExplorationTarget.msg  ExplorationTargets.msg  MapData.msg  Nav2Waypoints.msg  PointGroup.msg  PointGroups.msg
autonomous_exploration_msgs/params/: mapping_rules.yaml
docker-workspace/: bashrc
docker-workspace/colcon_ws/install/: local_setup.sh  setup.sh
docker-workspace/colcon_ws/log/: latest_build
docker-workspace/colcon_ws/src/thesis/simple_robot/: package.xml  setup.cfg  setup.py
docker-workspace/colcon_ws/src/thesis/simple_robot/launch/: launch_simulation.launch.py
docker-workspace/colcon_ws/src/thesis/simple_robot/simple_robot/: simpleRobot.py
frontier_detection_vision/: package.xml  setup.cfg  setup.py
frontier_detection_vision/frontier_detection_vision/: frontierExplorationVision.py
interactive_map_tester/: package.xml  setup.cfg  setup.py
interactive_map_tester/interactive_map_tester/: interactiveMapDemo.py  loadInteractiveMap.py  pointGroup.py  saveInteractiveMap.py  visualizeInteractiveMap.py
interactive_map_tester/launch/: launchInteractiveMapTester.launch.py  test_launch.launch.py
interactive_map_tester/params/: burger.lua  burger_velodyne.lua  interactive_map_server.yaml  map_server.yaml  mapper_localization.yaml
launch/: launch_turtlebot3_simulation.launch.py
maps/factory/: interactive_map.pgm  map.pgm  map.yaml  point_groups.yaml
maps/house_1/: interactive_map.pgm  map.yaml  point_groups.yaml
maps/new_house/: interactive_map.pgm  keepout_mask.yaml  map.yaml  point_groups.yaml
maps/small_house/: interactive_map.pgm  map.yaml  point_groups.yaml
pointcloud2_filter/: CMakeLists.txt  package.xml
pointcloud2_filter/include/pointcloud2_filter/: pcl_filter.h
pointcloud2_filter/src/: pcl_filter.cpp  pcl_ros2_test.cpp
rosbridge_msgs/: CMakeLists.txt  package.xml
rosbridge_msgs/msg/: MapData.msg  PosRot.msg
rosbridge_msgs/params/: mapping_rules.yaml
simulation_assets/thesis_gazebo/: CMakeLists.txt  package.xml
simulation_assets/thesis_gazebo/launch/: launch_simulation.launch.py  robot_state_publisher.launch.py
simulation_assets/thesis_gazebo/log/: latest_list
simulation_assets/thesis_gazebo/models/house_1/: model.config  model.sdf
simulation_assets/thesis_gazebo/models/house_1/meshes/: house_1.dae
simulation_assets/thesis_gazebo/models/house_2/: model.config  model.sdf
simulation_assets/thesis_gazebo/models/house_2/meshes/: house_2.dae
simulation_assets/thesis_gazebo/models/log/: latest_list
simulation_assets/thesis_gazebo/models/small_house/: model.sdf
simulation_assets/thesis_gazebo/models/small_house_v2/: model.config
simulation_assets/thesis_gazebo/models/tmp_house/: model.sdf
simulation_assets/thesis_gazebo/models/turtlebot3__house/: model.sdf
simulation_assets/thesis_gazebo/models/turtlebot3_burger_velodyne/: model-1_4.sdf  model.config  model.sdf
simulation_assets/thesis_gazebo/models/turtlebot3_burger_velodyne/urdf/: turtlebot3_burger_velodyne.urdf
simulation_assets/thesis_gazebo/models/velodyne/: model.config  model.sdf
simulation_assets/thesis_gazebo/worlds/empty/burger/: burger.model
simulation_assets/thesis_gazebo/worlds/empty/burger_velodyne/: burger_velodyne.model
simulation_assets/thesis_gazebo/worlds/factory/burger/: burger.model
simulation_assets/thesis_gazebo/worlds/factory/burger_velodyne/: burger_velodyne.model
simulation_assets/thesis_gazebo/worlds/hospital/burger_velodyne/: burger_velodyne.model
simulation_assets/thesis_gazebo/worlds/house_1/burger/: burger.model
simulation_assets/thesis_gazebo/worlds/house_1/burger_velodyne/: burger_velodyne.model
simulation_assets/thesis_gazebo/worlds/house_2/burger/: burger.model
simulation_assets/thesis_gazebo/worlds/house_2/burger_velodyne/: burger_velodyne.model
simulation_assets/thesis_gazebo/worlds/new_house/burger/: burger.model
simulation_assets/thesis_gazebo/worlds/new_house/burger_velodyne/: burger_velodyne.model
simulation_assets/thesis_gazebo/worlds/small_house/burger_velodyne/: burger_velodyne.model
simulation_assets/thesis_gazebo/worlds/small_house_v2/burger/: burger.model
simulation_assets/thesis_gazebo/worlds/small_house_v2/burger_velodyne/: burger_velodyne.model
simulation_assets/velodyne_gazebo_plugins/: CMakeLists.txt  package.xml
simulation_assets/velodyne_gazebo_plugins/log/: latest_list
simulation_assets/velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
thesis_gazebo/: package.xml
thesis_gazebo/launch/: launch_simulation.launch.py
thesis_gazebo/models/small_house/: model.config  model.sdf
thesis_gazebo/models/small_house_v2/: model.sdf
thesis_gazebo/models/tmp_house/: model.config
thesis_gazebo/worlds/burger_new_house/: burger_new_house.model
vision_based_exploration/: package.xml  setup.cfg  setup.py
vision_based_exploration/config/: mapper_params_online_async.yaml
vision_based_exploration/launch/: launch_turtlebot3_simulation.launch.py  turtlebot3_cartographer.launch.py  turtlebot3_new_house.launch.py
vision_based_exploration/vision_based_exploration/: autonomousExploration.py  frontierExplorationVision.py  simpleRobot.py
vision_based_exploration/worlds/: burger_new_house.model
vision_based_exploration_msgs/: CMakeLists.txt  package.xml
vision_based_exploration_msgs/msg/: ExplorationTarget.msg
(+436 files in other folders)
