<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_exploration_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="antonikaras1995@hotmail.com">antony</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>nav2_msgs</exec_depend>
    <build_type>ament_cmake</build_type>
      <ros1_bridge mapping_rules="params/mapping_rules.yaml"/>
  </export>
</package>
